--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin: 0; 
+    font-family: 'Lato', sans-serif;
+    font-family: 'M PLUS 1p', sans-serif;  
+}
+
+
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=M+PLUS+1p:wght@300&display=swap');    
+
+
