--- a/src/app/components/botaopadrao/botaopadrao.component.css
+++ b/src/app/components/botaopadrao/botaopadrao.component.css
@@ -5,8 +5,9 @@ button{
   padding: 10px;
   background-color: black;
   color: white;
-
-  
+  float: left;
+  font-weight: bold;
+  margin-left: 10px;
   border-radius: 3px;
   border: 1px solid black;
   cursor: pointer;
@@ -22,6 +23,7 @@ button:hover {
   color: white;
   background-color: black;
   border: 1px solid black;
+  
 }
 
 .teste {
@@ -33,4 +35,5 @@ button:hover {
   background-color: white;
   border: 1px solid black;
   color: black;
+  transition: background 0.6s;
 }
