--- a/src/app/components/first-component/first-component.component.css
+++ b/src/app/components/first-component/first-component.component.css
@@ -1,6 +1,5 @@
 .container {
     width: 220px;
-    box-shadow: 0px 0 2px rgba(0, 0, 0, 0.5), 0px 0 0px rgba(0, 0, 0, 0.5), 0 0px 0px rgba(0, 0, 0, 0.5);
     border-top-right-radius: 20px;
     padding: 20px;
     padding-top: 30px;
@@ -10,10 +9,11 @@
     height: 90%;
     display: flex;
     flex-direction: column;  
+    background-color: #ccc;
   }
 
   .linha {
-    border-top-right-radius: 60px;
+
     width: 100%;
     height: 20px;
     position: absolute; /* Para posicionar a faixa dentro do container */
